[tool.poetry]
name = "duplifinder"
version = "1.0.1"
description = "This is cli util which finds all duplicate files in specific directory."
authors = ["Gleb Guglya <gleb.gugl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
